Pass through search key accelerator to Android window

- TalkBack (screen reader on Android) uses search key as modifier key.
  We want to pass search key accelerator without rewrite if user is
  navigating with TalkBack.

Bug: 854917
Test: None
Change-Id: I304f2c2013c95f4efbd9a57bdd6b47dfa5017411
Reviewed-on: https://chromium-review.googlesource.com/1111480
Reviewed-by: David Tseng <dtseng@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Yuki Awano <yawano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570981}
Former-commit-id: ce4c62d356b4444dd5a4ce852bc41e5bb934759b