chrome/browser/chromeos/events/event_rewriter_unittest.cc
@@ -120,7 +120,7 @@ class EventRewriterTest : public ash::AshTestBase {
     input_method_manager_mock_ = new input_method::MockInputMethodManagerImpl;
     chromeos::input_method::InitializeForTesting(
         input_method_manager_mock_);  // pass ownership
-    delegate_ = std::make_unique<EventRewriterDelegateImpl>();
+    delegate_ = std::make_unique<EventRewriterDelegateImpl>(nullptr);
     delegate_->set_pref_service_for_testing(prefs());
     rewriter_ =
         std::make_unique<ui::EventRewriterChromeOS>(delegate_.get(), nullptr);
@@ -2177,7 +2177,7 @@ class EventRewriterAshTest : public ash::AshTestBase {
   void SetUp() override {
     AshTestBase::SetUp();
     sticky_keys_controller_ = ash::Shell::Get()->sticky_keys_controller();
-    delegate_ = std::make_unique<EventRewriterDelegateImpl>();
+    delegate_ = std::make_unique<EventRewriterDelegateImpl>(nullptr);
     delegate_->set_pref_service_for_testing(prefs());
     rewriter_ = std::make_unique<ui::EventRewriterChromeOS>(
         delegate_.get(), sticky_keys_controller_);
